--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "requests>=2.32.3",
     "semantic-kernel>=1.25.0",
     "sendgrid>=6.11.0",
-    "setuptools>=78.1.0"
+    "setuptools>=78.1.0",
+    "pandas>=2.3.1",                # newly added
+    "scikit-learn>=1.7.1"           # newly added
 ]
 
 [dependency-groups]
